# rust-auth

./: Cargo.toml
migrations/: 0001_users.sql
src/: error.rs  google_auth.rs  jwt.rs  mailer.rs  main.rs  models.rs
src/models/: mod.rs
src/routes/: auth.rs  protected.rs
