[package]
name = "auth_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json", "macros"] }
bcrypt = "0.19.1"
jsonwebtoken = "=9.3.0"
chrono = { version = "0.4.44", features = ["serde"] }  
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }  
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }  # added uuid and chrono features
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
lettre = { version = "0.11.22", features = ["tokio1-native-tls", "smtp-transport"] }
rand = "0.10.1"

